<resources>
    <string name="app_name">Alpha5</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_list_line">任务列表</string>
    <string name="title_activity_list">新增任务</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_addList">添加</string>
    <string name="item_refreshList">刷新</string>
    <string name="item_purgeList">清除</string>
    <string name="action_unlock">解锁</string>
    <string name="item_listline">ListLine</string>
    <string name="title_activity_item_line">事项列表</string>
    <string name="hint_title">标题：请输入 </string>
    <string name="hint_content">内容：请输入 </string>
    <string name="button_add">提交</string>
    <string name="title_activity_item">新增事项</string>
    <string name="buttong_unlock">解锁屏幕</string>
    <string name="text_hint_no_clock">未设置提醒</string>
    <string name="button_showNotify">显示通知</string>
    <string name="title_activity_item_detail">事项详情</string>
    <string name="title_activity_combo_item_line">整理事项</string>
    <string name="title_activity_item_line_frame">ItemLineFrameActivity</string>
    <string name="title_activity_xdemo03">Xdemo03</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_simple">simpleActivity</string>
    <string name="fragment_title_history">过去</string>
    <string name="fragment_title_plan">当下</string>　
    <string name="fragment_title_reminder">闹钟</string>
    <string name="sheet_action_edit">修改</string>
    <string name="sheet_action_delete">删掉</string>
    <string name="sheet_action_finish">完成</string>
    <string name="sheet_action_close">等等..</string>
    <string name="button_press_to_save">记好了</string>
    <string name="label_setting_alarm">调下闹钟</string>
    <string name="long_content_testing">
            This is Header ,start here.
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            coordinatorlayout toolbar
            This is Footer,End.
    </string>
    <string name="popup_write_in_hint">从此开始：</string>
    <string name="sheet_action_title">对它，你想？</string>
</resources>
