<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sumugu.liubo.lc.ListLineActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_addlist"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/item_addList"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_refreshlist"
        android:title="@string/item_refreshList"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_rotate" />
    <item
        android:id="@+id/action_purgelist"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/item_purgeList"></item>

</menu>
