<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sheet_action_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sheet_action_edit"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sheet_action_finish"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sheet_action_delete"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/sheet_action_close"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>